<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/black_light"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/civ_profile_image"
                android:textColor="@color/grey_light"
                android:textSize="18sp"
                android:lines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                tools:text="Username" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_username"
                android:layout_marginEnd="5dp"
                android:layout_toEndOf="@id/civ_profile_image"
                android:background="@drawable/rounded_corner_text"
                android:drawablePadding="5dp"
                android:ellipsize="end"
                android:gravity="center"
                android:lines="1"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="Office"
                app:drawableStartCompat="@drawable/ic_baseline_business_24" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/black_med"
            android:columnCount="3">

            <LinearLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="12" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/repository"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:textColor="@color/white">

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="278" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/followers"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:text="278" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/following"
                    android:textColor="@color/white" />
            </LinearLayout>
        </GridLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>