<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/black"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/civ_profile_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/profile_picture"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/profile_header_gradient"
                android:gravity="bottom"
                android:paddingHorizontal="32dp"
                android:textColor="@color/grey_light"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/civ_profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Name" />

            <ImageButton
                android:id="@+id/ib_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#00000000"
                android:contentDescription="@string/share_profile"
                android:src="@drawable/ic_baseline_share_24"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="username" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/grey_dark"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username"
                tools:text="Mumbai, India" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawablePadding="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="@color/grey_dark"
                app:drawableStartCompat="@drawable/ic_baseline_business_dark_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_location"
                tools:text="works @" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:background="@drawable/rounded_corner_text"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_company"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    tools:text="12" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/repository"
                    android:textColor="@color/white" />
            </LinearLayout>

            <!--<TextView
                android:id="@+id/tv_powered_by"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:text="@string/powered_by"
                android:textColor="@color/grey_dark"
                app:layout_constraintBottom_toTopOf="@+id/iv_logo" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:contentDescription="@string/logo_gitrove"
                android:src="@drawable/ic_gitrove_logo"
                app:layout_constraintBottom_toBottomOf="parent" />-->

            <!--<GridLayout
                android:id="@+id/gridLayout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:background="@color/black_med"
                android:columnCount="3"
                app:layout_constraintBottom_toBottomOf="parent">

                <LinearLayout
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_repository"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="12" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/repository"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:textColor="@color/white">

                    <TextView
                        android:id="@+id/tv_followers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="278" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/followers"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:text="278" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/following"
                        android:textColor="@color/white" />
                </LinearLayout>
            </GridLayout>-->
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tl_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_med"
            app:tabTextColor="@color/grey_dark" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</ScrollView>